--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "node": "^20.19.2",
