criando um prisma.ts que nao fica recriando conexões com o banco toda vez que for fgeito um reload

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@formkit/auto-animate": "^0.8.2",
+    "@prisma/client": "^6.9.0",
     "@radix-ui/themes": "^3.2.1",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "node": "^20.19.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
