--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "recharts": "^3.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
